package com.topjava.webapp.model;

public abstract class AbstractSection {
}
